# pubmed-multimodal-rag

./: .gitignore  Dockerfile  README.md  frontend.py  merge_lora.py  orchestrator.py  patch_system_prompt.py  patch_vllm.py  patch_wrapper.py  support_apis.py  train.py
qwen3_vl_wrapper/: README.md  pyproject.toml
qwen3_vl_wrapper/examples/: Qwen3VL_Multimodal_RAG.ipynb  embedding.ipynb  embedding_vllm.ipynb  reranker.ipynb  reranker_template.jinja  reranker_vllm.ipynb
qwen3_vl_wrapper/examples/rerank_results/: image_rerank_results.pkl  text_rerank_results.pkl
qwen3_vl_wrapper/examples/retrieval_results/: image_retrieval_results.pkl  text_retrieval_results.pkl
qwen3_vl_wrapper/src/evaluation/mmeb_v2/: arguments.py  constant.py  eval_embedding.py  eval_reranker.py  gather_results.py  models.py  report_score_v2.py
qwen3_vl_wrapper/src/evaluation/mmeb_v2/utils/: basic_utils.py  dataset_utils.py
qwen3_vl_wrapper/src/evaluation/mmeb_v2/utils/eval_utils/: metrics.py
qwen3_vl_wrapper/src/evaluation/mmeb_v2/utils/vision_utils/: vision_utils.py
qwen3_vl_wrapper/src/models/: qwen3_vl_reranker.py
